# rust-monorepo-analyzer

./: .gitignore  .gitmodules  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  Makefile  README.md  ROADMAP.md  install.ps1  install.sh
.github/: release-drafter.yml
.github/actions/rma-scan/: action.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml  rma-action.yml  rma-scan-reusable.yml  rma-scan.yml  test-action.yml  update-homebrew-tap.yml
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs  prompts.rs
crates/ai/src/providers/: claude.rs  local.rs  mod.rs  openai.rs
crates/analyzer/: Cargo.toml
crates/analyzer/src/: cache.rs  diff.rs  lib.rs  metrics.rs  project.rs  rules.rs  semgrep.rs
crates/analyzer/src/callgraph/: classifier.rs  mod.rs
crates/analyzer/src/flow/: alias.rs  callbacks.rs  cfg.rs  collections.rs  context_inference.rs  context_inference.rs.orig  context_inference.rs.rej  dataflow.rs  events.rs  field_sensitive.rs  implicit_flow.rs  interprocedural.rs  liveness.rs  mod.rs  reaching_defs.rs  sink_args.rs  sources.rs  symbol_table.rs  symbolic.rs  taint.rs  type_inference.rs  typestate.rs
crates/analyzer/src/imports/: go.rs  java.rs  javascript.rs  python.rs  rust_lang.rs
crates/analyzer/src/knowledge/: mod.rs  types.rs
crates/analyzer/src/knowledge/go/: gorm.rs
crates/analyzer/src/knowledge/java/: spring.rs
crates/analyzer/src/knowledge/rust_lang/: mod.rs
crates/analyzer/src/providers/: gosec.rs  mod.rs  osv.rs  osv_db.rs  oxc_native.rs  oxlint.rs  pmd.rs  rustsec.rs
crates/analyzer/src/security/: dataflow_rules.rs  generic.rs  go.rs  java.rs  javascript.rs  mod.rs  null_pointer.rs  python.rs  resource_leak.rs  rust.rs  typestate_rules.rs  xss_taint.rs
crates/analyzer/src/semantics/: bash.rs  csharp.rs  elixir.rs  kotlin.rs  mod.rs  ocaml.rs  php.rs  scala.rs  solidity.rs  swift.rs
crates/analyzer/tests/: typestate_integration.rs
crates/cli/: Cargo.toml
crates/cli/benches/: cli_bench.rs
crates/cli/src/: filter.rs  main.rs  progress.rs
crates/cli/src/commands/: baseline.rs  bench.rs  cache.rs  config.rs  daemon.rs  doctor.rs  fix.rs  flows.rs  init.rs  mod.rs  plugin.rs  scan.rs  search.rs  security.rs  stats.rs  suppress.rs  watch.rs
crates/cli/src/output/: github.rs  html.rs  json.rs  mod.rs  pretty.rs  sarif.rs  tables.rs  text.rs
crates/cli/src/output/diagnostics/: codes.rs  mod.rs  renderer.rs  source.rs  spans.rs
crates/cli/src/tui/: mod.rs
crates/cli/src/ui/: errors.rs  mod.rs  progress.rs  theme.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs
crates/common/src/suppression/: audit.rs  entry.rs  mod.rs  store.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: api.rs  lib.rs  websocket.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs  search.rs  store.rs  watcher.rs
crates/knowledge-gen/: Cargo.toml
crates/knowledge-gen/src/: codegen.rs  main.rs
crates/knowledge-gen/src/codeql/: mapper.rs  mod.rs
crates/knowledge-gen/src/pysa/: mapper.rs  mod.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: backend.rs  diagnostics.rs  main.rs
crates/parser/: Cargo.toml
crates/parser/benches/: parser_bench.rs
crates/parser/src/: languages.rs  walker.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: host.rs  lib.rs  loader.rs  registry.rs
crates/rules/: Cargo.toml  build.rs
crates/rules/examples/: load_semgrep.rs
crates/rules/rules/generic/secrets/security/: detected-slack-webhook.yaml
crates/rules/rules/javascript/express/security/audit/xss/mustache/: explicit-unescape.yaml
crates/rules/rules/python/django/security/audit/templates/: debug-template-tag.yaml
crates/rules/rules/python/django/security/audit/xss/: template-autoescape-off.yaml  template-var-unescaped-with-safeseq.yaml
crates/rules/rules/python/flask/security/xss/audit/: template-autoescape-off.yaml  template-unescaped-with-safe.yaml
crates/rules/src/: embedded.rs  format.rs  lib.rs  loader.rs  matcher.rs  pattern.rs  registry.rs  translator.rs
docs/: API.md  CLI.md  GITHUB-ACTION.md  INSTALLATION.md  js-ts-rules-reference.md
editors/: README.md
editors/jetbrains/: README.md  build.gradle.kts
editors/jetbrains/src/main/kotlin/com/rma/plugin/: RmaAnnotator.kt  RmaConfigurable.kt  RmaService.kt
editors/jetbrains/src/main/kotlin/com/rma/plugin/actions/: RmaActions.kt
editors/neovim/: README.md  rma.lua
editors/vscode/: README.md  package.json
editors/vscode/src/: extension.ts
editors/web-dashboard/: README.md  index.html
homebrew/: rma.rb
npm/: README.md  package.json
vscode-extension/: package.json
vscode-extension/src/: extension.ts
