[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/parser",
    "crates/analyzer",
    "crates/indexer",
    "crates/cli",
    "crates/daemon",
    "crates/plugins",
    "crates/lsp",
    "crates/ai",
]

[workspace.package]
version = "0.12.0"
edition = "2024"
authors = ["Rust Monorepo Analyzer Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bumahkib7/rust-monorepo-analyzer"

[workspace.dependencies]
# Core
anyhow = "1.0"
toml = "0.8"
glob = "0.3"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Parsing - tree-sitter 0.23.x for stable grammar compatibility
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"

# File system
walkdir = "2.5"
ignore = "0.4"
notify = { version = "8.0", features = ["serde"] }

# Indexing & Storage
tantivy = "0.22"
sled = "0.34"

# Graph analysis
petgraph = "0.8"

# HTTP/API
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Testing & Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.16"
pretty_assertions = "1.4"

# WASM plugin system
wasmtime = "41"
wit-bindgen = "0.40"

# LSP
tower-lsp = "0.20"
async-trait = "0.1"

# AI integration
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Git integration
gix = { version = "0.74", default-features = false, features = ["max-performance"] }

# Rust security advisory database
rustsec = "0.31"

# JavaScript/TypeScript linting (oxc project) - pinned for reproducible builds
oxc_linter = { git = "https://github.com/oxc-project/oxc", rev = "1d34b426" }
oxc_diagnostics = { git = "https://github.com/oxc-project/oxc", rev = "1d34b426" }
oxc_span = { git = "https://github.com/oxc-project/oxc", rev = "1d34b426" }
oxc_allocator = { git = "https://github.com/oxc-project/oxc", rev = "1d34b426" }
oxc_parser = { git = "https://github.com/oxc-project/oxc", rev = "1d34b426" }
oxc_semantic = { git = "https://github.com/oxc-project/oxc", rev = "1d34b426" }
oxc_ast = { git = "https://github.com/oxc-project/oxc", rev = "1d34b426" }

# Output formats
termtree = "0.5"
colored = "3.0"
indicatif = "0.17"
comfy-table = "7.1"
chrono = "0.4"
dirs = "6.0"

# Dev profile: optimize for fast compile times
[profile.dev]
opt-level = 0
debug = 1                    # Minimal debug info (faster)
split-debuginfo = "unpacked" # Faster incremental builds
incremental = true

# Dev dependencies: compile with some optimization for faster tests
[profile.dev.package."*"]
opt-level = 1

# CI profile: balance between compile time and runtime
[profile.ci]
inherits = "dev"
opt-level = 1
debug = 0                    # No debug info in CI
incremental = false          # More reliable caching

# Release profile: maximum optimization
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true                 # Strip symbols for smaller binary

[profile.bench]
lto = "thin"
