[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/parser",
    "crates/analyzer",
    "crates/rules",
    "crates/indexer",
    "crates/cli",
    "crates/daemon",
    "crates/plugins",
    "crates/lsp",
    "crates/ai",
    "crates/knowledge-gen",
]

[workspace.package]
version = "0.20.1"
edition = "2024"
authors = ["Qryon Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bumahkib7/qryon"

[workspace.dependencies]
# Core
anyhow = "1.0"
toml = "0.8"
glob = "0.3"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Parsing - tree-sitter 0.24.x for maximum performance + 30+ grammars
tree-sitter = "0.25"

# Systems languages
tree-sitter-rust = "0.24"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"

# JVM languages
tree-sitter-java = "0.23"
tree-sitter-kotlin = { package = "tree-sitter-kotlin-ng", version = "1.1" }
tree-sitter-scala = "0.23"

# Web languages
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"

# Scripting languages
tree-sitter-python = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-lua = "0.2"

# Functional languages
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.23"
tree-sitter-elixir = "0.3"

# Other compiled languages
tree-sitter-go = "0.23"
tree-sitter-swift = "0.6"
tree-sitter-c-sharp = "0.23"

# Data/Config languages
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml = { package = "tree-sitter-toml-ng", version = "0.7" }
# tree-sitter-sql disabled - no compatible crate for tree-sitter 0.24

# Infrastructure
tree-sitter-bash = "0.23"
# tree-sitter-dockerfile disabled - no compatible crate for tree-sitter 0.24
tree-sitter-hcl = "1.1"

# Markup
tree-sitter-markdown = { package = "tree-sitter-md", version = "0.5" }

# Other
tree-sitter-solidity = "1.2"
# tree-sitter-protobuf disabled - no compatible crate for tree-sitter 0.24

# Parallelism
rayon = "1.10"
crossbeam = "0.8"

# File system
walkdir = "2.5"
ignore = "0.4"
notify = { version = "8.0", features = ["serde"] }

# Indexing & Storage
tantivy = "0.25"
sled = "0.34"

# Graph analysis
petgraph = "0.8"

# HTTP/API
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Testing & Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.16"
pretty_assertions = "1.4"

# WASM plugin system
wasmtime = "41"
wit-bindgen = "0.40"

# LSP
tower-lsp = "0.20"
async-trait = "0.1"

# AI integration
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Git integration
gix = { version = "0.78", default-features = false, features = ["max-performance"] }

# Rust security advisory database
rustsec = "0.31"

# JavaScript/TypeScript linting (oxc project) - pinned for reproducible builds
oxc_linter = { git = "https://github.com/oxc-project/oxc", rev = "1d34b426" }
oxc_diagnostics = { git = "https://github.com/oxc-project/oxc", rev = "1d34b426" }
oxc_span = { git = "https://github.com/oxc-project/oxc", rev = "1d34b426" }
oxc_allocator = { git = "https://github.com/oxc-project/oxc", rev = "1d34b426" }
oxc_parser = { git = "https://github.com/oxc-project/oxc", rev = "1d34b426" }
oxc_semantic = { git = "https://github.com/oxc-project/oxc", rev = "1d34b426" }
oxc_ast = { git = "https://github.com/oxc-project/oxc", rev = "1d34b426" }

# Output formats
termtree = "0.5"
colored = "3.0"
indicatif = "0.17"
comfy-table = "7.1"
chrono = "0.4"
dirs = "6.0"

# Dev profile: optimize for fast compile times
[profile.dev]
opt-level = 0
debug = 1                    # Minimal debug info (faster)
split-debuginfo = "unpacked" # Faster incremental builds
incremental = true

# Dev dependencies: compile with some optimization for faster tests
[profile.dev.package."*"]
opt-level = 1

# CI profile: balance between compile time and runtime
[profile.ci]
inherits = "dev"
opt-level = 1
debug = 0                    # No debug info in CI
incremental = false          # More reliable caching

# Release profile: maximum optimization
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true                 # Strip symbols for smaller binary

[profile.bench]
lto = "thin"
