[package]
name = "rma-ai"
description = "AI-powered vulnerability detection for RMA"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rma-common = { version = "0.15.0", path = "../common" }
rma-parser = { version = "0.15.0", path = "../parser" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
