[package]
name = "rma-analyzer"
description = "Code analysis and security scanning for Rust Monorepo Analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rma-common = { version = "0.9.0", path = "../common" }
rma-parser = { version = "0.9.0", path = "../parser" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
petgraph.workspace = true
tree-sitter.workspace = true
regex = "1"
quick-xml = { version = "0.31", features = ["serialize"] }
shellexpand = "3"
rustsec.workspace = true
walkdir.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
toml = "0.8"

# Native JS/TS linting via oxc
oxc_linter.workspace = true
oxc_diagnostics.workspace = true
oxc_span.workspace = true
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_semantic.workspace = true
oxc_ast.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
