[package]
name = "rma-analyzer"
description = "Code analysis and security scanning for Rust Monorepo Analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["oxc"]
oxc = [
    "dep:oxc_linter",
    "dep:oxc_diagnostics",
    "dep:oxc_span",
    "dep:oxc_allocator",
    "dep:oxc_parser",
    "dep:oxc_semantic",
    "dep:oxc_ast",
]

[dependencies]
rma-common = { version = "0.15.0", path = "../common" }
rma-parser = { version = "0.15.0", path = "../parser" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
petgraph.workspace = true
tree-sitter.workspace = true
regex = "1"
quick-xml = { version = "0.39.0", features = ["serialize"] }
shellexpand = "3"
rustsec.workspace = true
walkdir.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
toml = "0.9.11"
dirs.workspace = true
chrono.workspace = true

# Native JS/TS linting via oxc (optional for crates.io publishing)
oxc_linter = { workspace = true, optional = true }
oxc_diagnostics = { workspace = true, optional = true }
oxc_span = { workspace = true, optional = true }
oxc_allocator = { workspace = true, optional = true }
oxc_parser = { workspace = true, optional = true }
oxc_semantic = { workspace = true, optional = true }
oxc_ast = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
