[package]
name = "rma-cli"
description = "Command-line interface for Rust Monorepo Analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rma"
path = "src/main.rs"

[dependencies]
rma-common = { path = "../common" }
rma-parser = { path = "../parser" }
rma-analyzer = { path = "../analyzer" }
rma-indexer = { path = "../indexer" }
rma-ai = { path = "../ai" }
rma-daemon = { path = "../daemon" }
rma-plugins = { path = "../plugins" }
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env", "string"] }
clap_complete = "4.5"
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
colored.workspace = true
indicatif = { workspace = true, features = ["rayon"] }
comfy-table.workspace = true
dialoguer = "0.11"
console = "0.15"
humantime = "2.1"
dirs.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion = "0.5"

[[bench]]
name = "cli_bench"
harness = false
