[package]
name = "rma-cli"
description = "Command-line interface for Rust Monorepo Analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rma"
path = "src/main.rs"

[dependencies]
rma-common = { version = "0.2.0", path = "../common" }
rma-parser = { version = "0.2.0", path = "../parser" }
rma-analyzer = { version = "0.2.0", path = "../analyzer" }
rma-indexer = { version = "0.2.0", path = "../indexer" }
rma-ai = { version = "0.2.0", path = "../ai" }
rma-daemon = { version = "0.2.0", path = "../daemon" }
rma-plugins = { version = "0.2.0", path = "../plugins" }
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env", "string"] }
clap_complete = "4.5"
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
colored.workspace = true
indicatif = { workspace = true, features = ["rayon"] }
comfy-table.workspace = true
dialoguer = "0.12"
console = "0.16"
humantime = "2.1"
dirs.workspace = true
chrono.workspace = true
toml.workspace = true
sha2 = "0.10"

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "cli_bench"
harness = false
