[package]
name = "rma-cli"
description = "Static security analyzer for polyglot projects (JS/TS, Python, Rust, Go, Java)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/bumahkib7/rust-monorepo-analyzer"
homepage = "https://github.com/bumahkib7/rust-monorepo-analyzer"
documentation = "https://github.com/bumahkib7/rust-monorepo-analyzer#readme"
readme = "../../README.md"
keywords = ["security", "static-analysis", "linter", "sast"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "rma"
path = "src/main.rs"

[features]
default = ["oxc"]
oxc = ["rma-analyzer/oxc"]

[dependencies]
rma-common = { version = "0.18.0", path = "../common" }
rma-parser = { version = "0.18.0", path = "../parser" }
rma-analyzer = { version = "0.18.0", path = "../analyzer", default-features = false }
rma-indexer = { version = "0.18.0", path = "../indexer" }
rma-ai = { version = "0.18.0", path = "../ai" }
rma-daemon = { version = "0.18.0", path = "../daemon" }
rma-plugins = { version = "0.18.0", path = "../plugins" }
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env", "string"] }
clap_complete = "4.5"
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
colored.workspace = true
indicatif = { workspace = true, features = ["rayon"] }
comfy-table.workspace = true
dialoguer = "0.12"
console = "0.16"
humantime = "2.1"
dirs.workspace = true
chrono.workspace = true
toml.workspace = true
sha2 = "0.10"
crossterm = "0.28"
ratatui = "0.29"
futures = "0.3"
walkdir = "2"
regex = "1"
glob.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "cli_bench"
harness = false
