[package]
name = "rma-common"
description = "Common types and utilities for Rust Monorepo Analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
toml.workspace = true
regex = "1.10"
chrono.workspace = true
sha2 = "0.10"
