[package]
name = "rma-daemon"
description = "Background daemon and API server for Rust Monorepo Analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rma-common = { version = "0.5.0", path = "../common" }
rma-parser = { version = "0.5.0", path = "../parser" }
rma-analyzer = { version = "0.5.0", path = "../analyzer" }
rma-indexer = { version = "0.5.0", path = "../indexer" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

[dev-dependencies]
tempfile.workspace = true
