[package]
name = "rma-indexer"
description = "Tantivy/Sled based indexing for Rust Monorepo Analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rma-common = { version = "0.4.1", path = "../common" }
rma-parser = { version = "0.4.1", path = "../parser" }
rma-analyzer = { version = "0.4.1", path = "../analyzer" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
sled.workspace = true
notify.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
