[package]
name = "knowledge-gen"
description = "Code generator for framework security knowledge from CodeQL MaD and Pysa taint stubs"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "knowledge-gen"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
