[package]
name = "rma-lsp"
description = "Language Server Protocol implementation for RMA"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rma-lsp"
path = "src/main.rs"

[dependencies]
rma-common = { path = "../common" }
rma-parser = { path = "../parser" }
rma-analyzer = { path = "../analyzer" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
