[package]
name = "rma-lsp"
description = "Language Server Protocol implementation for RMA"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rma-lsp"
path = "src/main.rs"

[dependencies]
rma-common = { version = "0.15.1", path = "../common" }
rma-parser = { version = "0.15.1", path = "../parser" }
rma-analyzer = { version = "0.15.1", path = "../analyzer" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
async-trait.workspace = true
dashmap = "6.0"

[dev-dependencies]
tempfile.workspace = true
