[package]
name = "rma-lsp"
description = "Language Server Protocol implementation for RMA - provides IDE integration for security analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/bumahkib7/rust-monorepo-analyzer"
keywords = ["lsp", "language-server", "security", "static-analysis"]
categories = ["development-tools"]

[[bin]]
name = "rma-lsp"
path = "src/main.rs"

[dependencies]
rma-common = { version = "0.16.0", path = "../common" }
rma-parser = { version = "0.16.0", path = "../parser" }
rma-analyzer = { version = "0.16.0", path = "../analyzer" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
async-trait.workspace = true
dashmap = "6.0"

[dev-dependencies]
tempfile.workspace = true
