[package]
name = "rma-parser"
description = "Tree-sitter based polyglot parser for Rust Monorepo Analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rma-common = { version = "0.5.0", path = "../common" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
walkdir.workspace = true
ignore.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
glob = "0.3"

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "parser_bench"
harness = false
