[package]
name = "rma-parser"
description = "Tree-sitter based polyglot parser for Rust Monorepo Analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rma-common = { version = "0.16.0", path = "../common" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
walkdir.workspace = true
ignore.workspace = true
glob = "0.3"

# Tree-sitter core
tree-sitter.workspace = true

# Systems languages
tree-sitter-rust.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true

# JVM languages
tree-sitter-java.workspace = true
tree-sitter-kotlin.workspace = true
tree-sitter-scala.workspace = true

# Web languages
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-html.workspace = true
tree-sitter-css.workspace = true

# Scripting languages
tree-sitter-python.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-php.workspace = true
tree-sitter-lua.workspace = true

# Functional languages
tree-sitter-haskell.workspace = true
tree-sitter-ocaml.workspace = true
tree-sitter-elixir.workspace = true

# Other compiled languages
tree-sitter-go.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-c-sharp.workspace = true

# Data/Config languages
tree-sitter-json.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-toml.workspace = true
# tree-sitter-sql disabled - no compatible crate for tree-sitter 0.24

# Infrastructure
tree-sitter-bash.workspace = true
# tree-sitter-dockerfile disabled - no compatible crate for tree-sitter 0.24
tree-sitter-hcl.workspace = true

# Markup
tree-sitter-markdown.workspace = true

# Other
tree-sitter-solidity.workspace = true
# tree-sitter-protobuf disabled - no compatible crate for tree-sitter 0.24

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "parser_bench"
harness = false
