[package]
name = "rma-plugins"
description = "WASM plugin system for custom analysis rules"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rma-common = { version = "0.5.0", path = "../common" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
wasmtime.workspace = true
tokio.workspace = true
dirs = "6.0"

[dev-dependencies]
tempfile.workspace = true
