[package]
name = "rma-rules"
version = "0.17.0"
edition = "2021"
description = "Rule engine for RMA - loads and executes security rules from YAML (Semgrep-compatible)"
license = "MIT"
repository = "https://github.com/bumahkib7/rust-monorepo-analyzer"
build = "build.rs"
include = ["src/**/*", "Cargo.toml", "build.rs", "rules/**/*"]

[dependencies]
rma-common = { version = "0.17.0", path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
bincode = "1.3"
regex = "1.10"
glob = "0.3"
walkdir = "2.4"
thiserror = "1.0"
tracing = "0.1"
once_cell = "1.19"
rayon = "1.8"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bincode = "1.3"
walkdir = "2.4"
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
